--- a/src/tsconfig.app.json
+++ b/src/tsconfig.app.json
@@ -5,7 +5,7 @@
 	"module": "es2015",
 	"compilerOptions": {
 		"outDir": "../out-tsc/app",
-		"baseUrl": "./",
+		"baseUrl": "../",
 		"types": ["node"]
 	}
 }
