--- a/.github/workflows/registry-build-publish.yml
+++ b/.github/workflows/registry-build-publish.yml
@@ -14,26 +14,34 @@ env:
     IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-    test:
-        name: 🧪 Test
-        runs-on: ubuntu-latest
-        strategy:
-            matrix:
-                node-version: [20.9.0]
-
-        steps:
-            - name: ⬇️  Checkout repository
-              uses: actions/checkout@v4.2.2
-            - name: 🔨 Setup node
-              uses: actions/setup-node@master
-              with:
-                  node-version: ${{ matrix.node-version }}
-            - name: 📲 Install dependencies
-              run: npm ci
-            - name: Format
-              run: npx prettier --check .
-            - name: 📝 Test
-              run: npm run test-headless
+    lint:
+      name: 🔍 Formatting & Linting
+      runs-on: ubuntu-latest
+      steps:
+        - name: ⬇️  Checkout repository
+          uses: actions/checkout@v4.2.2
+        - name: 🔨 Setup node
+          uses: actions/setup-node@v4.4.0
+          with:
+              node-version-file: '.nvmrc'
+        - name: 📲 Install dependencies
+          run: npm ci
+        - name: Prettier
+          run: npx prettier --check .
+    # test:
+    #     name: 🧪 Test
+    #     runs-on: ubuntu-latest
+    #     steps:
+    #         - name: ⬇️  Checkout repository
+    #           uses: actions/checkout@v4.2.2
+    #         - name: 🔨 Setup node
+    #           uses: actions/setup-node@v4.4.0
+    #           with:
+    #               node-version-file: '.nvmrc'
+    #         - name: 📲 Install dependencies
+    #           run: npm ci
+    #         - name: 📝 Test
+    #           run: npm run test-headless
 
     create-release:
         permissions:
