--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
 		"typeRoots": ["node_modules/@types"],
 		"lib": ["es7", "es6", "dom", "esnext"],
 		"module": "commonjs",
-		"baseUrl": "./",
+		"baseUrl": "src",
 		"useDefineForClassFields": false,
 		"paths": {
 			"@spartan-ng/ui-accordion-helm": ["./src/app/components/spartan/ui-accordion-helm/src/index.ts"],
