--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
 		"marked": "^15.0.11",
 		"ngx-countup": "^13.2.0",
 		"ngx-drag-drop": "^19.0.0",
+		"ngx-dynamic-hooks": "^3.1.2",
 		"popper.js": "^1.15.0",
 		"postcss-cssnext": "3.1.1",
 		"postcss-prefix-selector": "^1.16.0",
