--- a/.github/workflows/registry-build-publish.yml
+++ b/.github/workflows/registry-build-publish.yml
@@ -14,26 +14,20 @@ env:
     IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-    test:
-        name: 🧪 Test
+    lint:
+        name: 🔍 Formatting & Linting
         runs-on: ubuntu-latest
-        strategy:
-            matrix:
-                node-version: [20.9.0]
-
         steps:
             - name: ⬇️  Checkout repository
               uses: actions/checkout@v4.2.2
             - name: 🔨 Setup node
-              uses: actions/setup-node@master
+              uses: actions/setup-node@v4.4.0
               with:
-                  node-version: ${{ matrix.node-version }}
+                  node-version-file: '.nvmrc'
             - name: 📲 Install dependencies
               run: npm ci
-            - name: Format
+            - name: Prettier
               run: npx prettier --check .
-            - name: 📝 Test
-              run: npm run test-headless
 
     create-release:
         permissions:
