--- a/package.json
+++ b/package.json
@@ -101,7 +101,6 @@
 		"@types/source-map": "0.5.7",
 		"@types/uglify-js": "3.17.4",
 		"@types/webpack": "^5.28.5",
-		"autoprefixer": "^10.4.16",
 		"caniuse-lite": "^1.0.30000967",
 		"codelyzer": "^6.0.0",
 		"commitizen": "^4.3.0",
@@ -131,6 +130,7 @@
 		"onchange": "7.1.0",
 		"parse5": "^7.1.2",
 		"postcss": "^8.4.31",
+		"postcss-preset-env": "^10.2.3",
 		"protractor": "~7.0.0",
 		"remap-istanbul": "0.13.0",
 		"rimraf": "^6.0.1",
