fix: dont preserve whitespaces

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,7 +41,6 @@
 	},
 	"angularCompilerOptions": {
 		"strictTemplates": true,
-		"strictDomEventTypes": false,
-		"preserveWhitespaces": true
+		"strictDomEventTypes": false
 	}
 }
