feat: turn on strict dom event types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -41,6 +41,6 @@
 	},
 	"angularCompilerOptions": {
 		"strictTemplates": true,
-		"strictDomEventTypes": false
+		"strictDomEventTypes": true
 	}
 }
