refactor: remove implicit tsconfig setting

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -40,7 +40,6 @@
 		}
 	},
 	"angularCompilerOptions": {
-		"strictTemplates": true,
-		"strictDomEventTypes": true
+		"strictTemplates": true
 	}
 }
