Feat/learner profile (#1393)
* feat: add initial skill visualisation component

* fix(skill-visualisation): clean up, ts types, comments

* feat(skill-visualisation): add legend, mobile overview, fixes

* feat(skill-visualisation): language handling, new future skill json

* feat: improve the tooltip a bit

* feat: use more theme variables

* fix(skill-visualisation): new future colors, color for sub skill

* fix(skill-visualisation): fix for lang, remove unnecessary api call

* Feat/learner profile mobile (#1404)

* feat: add color guide

* feat: add new button variant for skills

* feat: replace hex colors with variables

* feat: move skill models, adjust imports

* feat: add translations

* feat: add icon

* feat: adjust button for icons

* fix: btn variant name

* feat: adjust directive

* feat: add translations

* feat: mobile view for bubbles

* feat: more translations

* feat: styling, text

* feat: add breakpoint service and minor adjustments

* fix: model

* fix: button again

* fix: text alignment for long esco toplevel skills

* fix(skill-visualisation): adjust future skill colors

* fix(skill-visualisation): change d3.select to svg.select

* feat: improve the tooltip a bit

* feat(translations): translate legend of bubbles

* feat(layout): move icon in button to center when mobile view active

* fix: resolve issues after merge

* build(deps): update ng-icons to support angular 19

* feat: use hour pipe to transform studyload to proper values

* feat: add icon in front of studyload

* fix(skill-visualisation): remove debug code

* feat: center text in bubbles and position studyload accordingly

* refactor: replace todo with custom breakpoint observer function

* feat: center svg on mobile

* feat: use breakpoint constant everywhere where necessary

* feat: add top-padding to studyload

---------

Co-authored-by: David Scheidt <david.scheidt@opensenselab.org>
Co-authored-by: jona159 <65068389+jona159@users.noreply.github.com>
Co-authored-by: jona159 <raabe

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
 		"module": "es2022",
 		"baseUrl": "./",
 		"useDefineForClassFields": false,
+		"resolveJsonModule": true,
 		"paths": {
 			"@spartan-ng/ui-dialog-helm": ["./src/app/components/spartan/ui-dialog-helm/src/index.ts"],
 			"@spartan-ng/ui-icon-helm": ["./src/app/components/spartan/ui-icon-helm/src/index.ts"],
