--- a/package.json
+++ b/package.json
@@ -39,12 +39,13 @@
 		"@angular/router": "19.2.2",
 		"@angularclass/request-idle-callback": "1.0.7",
 		"@concentricsky/badgr-style": "^20.1.2",
-		"@ng-icons/core": "^29.3.0",
-		"@ng-icons/lucide": "^29.3.0",
+		"@ng-icons/core": "^31.4.0",
+		"@ng-icons/lucide": "^31.4.0",
 		"@ngx-translate/core": "^16.0.4",
 		"@ngx-translate/http-loader": "^16.0.0",
 		"@spartan-ng/brain": "0.0.1-alpha.437",
 		"@spartan-ng/ui-core": "0.0.1-alpha.374",
+		"@types/d3": "^7.4.3",
 		"@types/fontfaceobserver": "2.1.3",
 		"@types/validator": "13.15.0",
 		"@w11k/git-info": "^1.1.2",
@@ -57,6 +58,8 @@
 		"clipboard": "^2.0.11",
 		"clsx": "^2.1.1",
 		"core-js": "^3.33.3",
+		"d3": "^7.9.0",
+		"d3-force-boundary": "^0.0.3",
 		"deepmerge": "^4.3.1",
 		"dialog-polyfill": "^0.5.6",
 		"file-saver": "^2.0.1",
