--- a/.github/workflows/registry-build-publish.yml
+++ b/.github/workflows/registry-build-publish.yml
@@ -2,7 +2,7 @@ name: 🏗️ Build and publish to Github Container Registry
 
 on:
     push:
-        branches: [main, release, develop]
+        branches: [main, production, develop]
         tags: ['v*.*.*']
     pull_request:
         branches:
@@ -35,7 +35,7 @@ jobs:
         runs-on: ubuntu-latest
         outputs:
             release_id: ${{ steps.create-release.outputs.result }}
-        if: startsWith(github.ref, 'refs/tags/')
+        if: github.ref == 'refs/heads/production'
 
         steps:
             - name: ⬇️ Checkout repository
@@ -56,7 +56,7 @@ jobs:
                         prerelease: false
                       })
 
-                      return data.id
+                        return data.id
 
     build-and-push-image:
         name: 🏗️ Build and publish
@@ -123,7 +123,7 @@ jobs:
             contents: write
         runs-on: ubuntu-latest
         needs: [create-release, build-and-push-image]
-        if: startsWith(github.ref, 'refs/tags/')
+        if: github.ref == 'refs/heads/production'
 
         steps:
             - name: 🚢 Publish release
