--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,42 +1,81 @@
 {
 	"compileOnSave": false,
 	"compilerOptions": {
-		"esModuleInterop": true,
-		"importHelpers": true,
-		"outDir": "./dist/out-tsc",
-		"sourceMap": true,
-		"declaration": false,
-		"moduleResolution": "node",
-		"experimentalDecorators": true,
-		"downlevelIteration": true,
-		"noImplicitAny": false,
-		"target": "ES2022",
-		"types": ["node"],
-		"typeRoots": ["node_modules/@types"],
-		"lib": ["dom", "es2022"],
-		"module": "es2022",
-		"baseUrl": "./",
-		"useDefineForClassFields": false,
-		"resolveJsonModule": true,
-		"paths": {
-			"@spartan-ng/ui-dialog-helm": ["./src/app/components/spartan/ui-dialog-helm/src/index.ts"],
-			"@spartan-ng/ui-icon-helm": ["./src/app/components/spartan/ui-icon-helm/src/index.ts"],
-			"@spartan-ng/ui-input-helm": ["./src/app/components/spartan/ui-input-helm/src/index.ts"],
-			"@spartan-ng/ui-label-helm": ["./src/app/components/spartan/ui-label-helm/src/index.ts"],
-			"@spartan-ng/ui-menu-helm": ["./src/app/components/spartan/ui-menu-helm/src/index.ts"],
-			"@spartan-ng/ui-pagination-helm": ["./src/app/components/spartan/ui-pagination-helm/src/index.ts"],
-			"@spartan-ng/ui-progress-helm": ["./src/app/components/spartan/ui-progress-helm/src/index.ts"],
-			"@spartan-ng/ui-select-helm": ["./src/app/components/spartan/ui-select-helm/src/index.ts"],
-			"@spartan-ng/ui-separator-helm": ["./src/app/components/spartan/ui-separator-helm/src/index.ts"],
-			"@spartan-ng/ui-spinner-helm": ["./src/app/components/spartan/ui-spinner-helm/src/index.ts"],
-			"@spartan-ng/ui-table-helm": ["./src/app/components/spartan/ui-table-helm/src/index.ts"],
-			"@spartan-ng/ui-tabs-helm": ["./src/app/components/spartan/ui-tabs-helm/src/index.ts"],
-			"@spartan-ng/ui-typography-helm": ["./src/app/components/spartan/ui-typography-helm/src/index.ts"],
-			"@spartan-ng/ui-switch-helm": ["./src/app/components/spartan/ui-switch-helm/src/index.ts"],
-			"@spartan-ng/ui-formfield-helm": ["./src/app/components/spartan/ui-formfield-helm/src/index.ts"],
-			"~/*": ["./src/app/*"]
-		}
-	},
+    "esModuleInterop": true,
+    "importHelpers": true,
+    "outDir": "./dist/out-tsc",
+    "sourceMap": true,
+    "declaration": false,
+    "moduleResolution": "bundler",
+    "experimentalDecorators": true,
+    "downlevelIteration": true,
+    "noImplicitAny": false,
+    "target": "ES2022",
+    "types": [
+      "node"
+    ],
+    "typeRoots": [
+      "node_modules/@types"
+    ],
+    "lib": [
+      "dom",
+      "es2022"
+    ],
+    "module": "es2022",
+    "baseUrl": "./",
+    "useDefineForClassFields": false,
+    "resolveJsonModule": true,
+    "paths": {
+      "@spartan-ng/ui-dialog-helm": [
+        "./src/app/components/spartan/ui-dialog-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-icon-helm": [
+        "./src/app/components/spartan/ui-icon-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-input-helm": [
+        "./src/app/components/spartan/ui-input-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-label-helm": [
+        "./src/app/components/spartan/ui-label-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-menu-helm": [
+        "./src/app/components/spartan/ui-menu-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-pagination-helm": [
+        "./src/app/components/spartan/ui-pagination-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-progress-helm": [
+        "./src/app/components/spartan/ui-progress-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-select-helm": [
+        "./src/app/components/spartan/ui-select-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-separator-helm": [
+        "./src/app/components/spartan/ui-separator-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-spinner-helm": [
+        "./src/app/components/spartan/ui-spinner-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-table-helm": [
+        "./src/app/components/spartan/ui-table-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-tabs-helm": [
+        "./src/app/components/spartan/ui-tabs-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-typography-helm": [
+        "./src/app/components/spartan/ui-typography-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-switch-helm": [
+        "./src/app/components/spartan/ui-switch-helm/src/index.ts"
+      ],
+      "@spartan-ng/ui-formfield-helm": [
+        "./src/app/components/spartan/ui-formfield-helm/src/index.ts"
+      ],
+      "~/*": [
+        "./src/app/*"
+      ]
+    }
+  },
 	"angularCompilerOptions": {
 		"strictTemplates": true
 	}
