--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,11 +1,9 @@
 {
-	"extends": "../tsconfig.json",
+	"extends": "./tsconfig.json",
 	"files": ["main.ts", "polyfills.ts"],
 	"include": ["src/**/*.d.ts"],
-	"module": "es2015",
 	"compilerOptions": {
-		"outDir": "../out-tsc/app",
-		"baseUrl": "../",
+		"outDir": "./out-tsc/app",
 		"types": ["node"]
 	}
 }
