--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
 		"experimentalDecorators": true,
 		"noImplicitAny": false,
 		"target": "ES2022",
-		"types": ["node", "jest"],
+		"types": ["node"],
 		"typeRoots": ["node_modules/@types"],
 		"lib": ["dom", "es2022"],
 		"module": "es2022",
@@ -38,5 +38,6 @@
 	},
 	"angularCompilerOptions": {
 		"strictTemplates": true
-	}
+	},
+	"exclude": ["src/**/*.spec.ts"]
 }
