--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,7 +1,6 @@
 {
 	"extends": "./tsconfig.json",
-	"files": ["main.ts", "polyfills.ts"],
-	"include": ["src/**/*.d.ts"],
+	"include": ["src/**/*.ts"],
 	"exclude": ["src/**/*.spec.ts"],
 	"compilerOptions": {
 		"outDir": "./out-tsc/app",
