--- a/.github/workflows/registry-build-publish.yml
+++ b/.github/workflows/registry-build-publish.yml
@@ -41,7 +41,7 @@ jobs:
                   node-version-file: '.nvmrc'
             - name: 📲 Install dependencies
               run: npm ci
-            - name: Prettier
+            - name: Run unit tests
               run: npm test -- --no-watch --no-progress --browsers=ChromeHeadless
 
     build-and-push-image:
