Feat/cms contents (#1339)
* feat(cms): add cms components

* fix(cms): updates for scripts, news

* fix(cms): revert prod baseUrl

* feat(cms): menu structure as tree

* fix(oeb-dropdown): add noTranslate input

* feat(cms): set components standalone, signal inputs

* fix(cms): fix for blog post image

* feat(cms): angular components in cms content, ki-assistant demo

* fix(shadow-dom): add overflow hidden

* feat(ai-demo): rename, add altcha

* feat(ai-demo): rename v2

* fix: remove FaqComponent from module declarations

* fix(ai-demo): working altcha implementation

* fix(ai-demo): clear altcha header after request

* feat(ai-assistent): layout, demo badge

* fix(cms-contents): post merge fixes

* fix(cms): enable angular inline scss, import oeb_styles into shadow-dom

* refactor(loading-dots): move css from screen.css to component

* feat(cms): add loading-dots

* fix(cms): fix some css import errors

* fix(shadow-dom): move scss to external file

* fix: remove version.ts

* fix: cleanup prettier

* fix(i18n): add translation for badge preview button

* fix(cms): remove shadow dom script timeout

* feat(cms): add 404 handling, version component

* fix(cms): forgot to stage 404 component

* fix(i18n): add validation translation strings

* fix(createbadge): fix for validator functions missing this context

* fix: correct baseUrl in environment.prod

* fix(cms): styling fixes, language changing on start page

* fix(cms): ai-assistant styles, fix ai result bg color

* fix(cms): prevent fetching page content twice

* feat(cms): add proper language handling to page-component

* fix(format): run prettier

---------

Co-authored-by: jona159 <65068389+jona159@users.noreply.github.com>
Co-authored-by: David Scheidt <david.scheidt@opensenselab.org>

--- a/angular.json
+++ b/angular.json
@@ -53,6 +53,7 @@
 						"sourceMap": true,
 						"optimization": false,
 						"namedChunks": true,
+						"inlineStyleLanguage": "scss",
 						"browser": "src/main.ts"
 					},
 					"configurations": {
@@ -172,7 +173,8 @@
 								"input": "./assets/@concentricsky/badgr-style/dist/images",
 								"output": "./assets/@concentricsky/badgr-style/dist/images"
 							}
-						]
+						],
+						"inlineStyleLanguage": "scss"
 					}
 				}
 			}
