--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
 		"marked": "^15.0.11",
 		"ngx-countup": "^13.2.0",
 		"ngx-drag-drop": "^20.0.1",
+		"ngx-dynamic-hooks": "^3.1.2",
 		"popper.js": "^1.15.0",
 		"postcss-prefix-selector": "^1.16.0",
 		"rxjs": "^7.8.1",
