--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"start-intellij": "ng serve --host 0.0.0.0 --disable-host-check --aot 2>&1 | perl -e '$|++; while (<>) { s/((ERROR|WARNING) in\\s*)(.*)/$1\\n$3/g; print $_; }'",
 		"build:widgets": "webpack --config widgets-webpack.config.ts",
 		"verify-prod-environment": "[[ -f src/environments/environment.prod.ts ]] || (echo '\\033[0;31m!!!'; echo '\\033[0;31m!!! No envrionment.prod.ts file present. Copy environment.prod.ts.example and modify it for your environment or consult the README'; echo '\\033[0;31m!!!'; echo; exit -1)",
-		"build:web-components": "ng build web-components-cli",
+		"build:web-components": "run-s build:web-components:*",
+		"build:web-components:oeb-version": "ng build web-components-cli --configuration oeb-version --single-bundle",
 		"build:app": "ng build --output-hashing=all --aot --configuration production && html-minifier -c html-minifier.config.json -o dist/index.html < dist/index.html",
 		"build:staging": "ng build --output-hashing=all --aot --configuration staging && html-minifier -c html-minifier.config.json -o dist/index.html < dist/index.html",
 		"build:develop": "ng build --output-hashing=all --aot --configuration develop && html-minifier -c html-minifier.config.json -o dist/index.html < dist/index.html",
@@ -66,6 +67,7 @@
 		"jspdf": "^2.5.1",
 		"maplibre-gl": "5.6.1",
 		"marked": "^15.0.11",
+		"ngx-build-plus": "^20.0.0",
 		"ngx-countup": "^13.2.0",
 		"ngx-drag-drop": "^20.0.1",
 		"ngx-dynamic-hooks": "^3.1.2",
@@ -127,6 +129,7 @@
 		"mapbox-gl": "^3.4.0",
 		"ngx-markdown-editor": "5.3.4",
 		"ngx-translate-testing": "^7.0.0",
+		"npm-run-all": "^4.1.5",
 		"onchange": "7.1.0",
 		"parse5": "^7.1.2",
 		"postcss": "^8.4.31",
