--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,19 @@
 						},
 						"oeb-skill-visualisation": {
 							"main": "src/app/recipient/components/recipient-skill-visualisation/recipient-skill-visualisation.web-component.ts",
-							"outputPath": "dist/webcomponents/oeb-skill-visualisation"
+							"outputPath": "dist/webcomponents/oeb-skill-visualisation",
+							"styles": [
+								"src/assets/@concentricsky/badgr-style/dist/css/screen.css",
+								"src/styles/oeb/oeb_styles.scss",
+								"src/styles/google-webfonts/inter.scss",
+								"src/styles/google-webfonts/nunito.scss",
+								"src/styles/google-webfonts/rubik.scss",
+								"node_modules/dialog-polyfill/dialog-polyfill.css",
+								"src/breakdown/static/css/re-style.css",
+								"node_modules/maplibre-gl/dist/maplibre-gl.css",
+								"node_modules/ngx-markdown-editor/assets/highlight.js/agate.min.css",
+								"src/app/recipient/components/recipient-skill-visualisation/recipient-skill-visualisation.component.scss"
+							]
 						}
 					}
 				}
