--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
 		"build:widgets": "webpack --config widgets-webpack.config.ts",
 		"verify-prod-environment": "[[ -f src/environments/environment.prod.ts ]] || (echo '\\033[0;31m!!!'; echo '\\033[0;31m!!! No envrionment.prod.ts file present. Copy environment.prod.ts.example and modify it for your environment or consult the README'; echo '\\033[0;31m!!!'; echo; exit -1)",
 		"build:web-components": "run-s build:web-components:*",
-		"build:web-components:oeb-version": "ng build web-components-cli --configuration oeb-version --single-bundle",
-		"build:web-components:oeb-skill-visualisation": "ng build web-components-cli --configuration oeb-skill-visualisation --single-bundle",
+		"build:web-components:oeb-version": "ng build web-components-cli --configuration oeb-version",
+		"build:web-components:oeb-skill-visualisation": "ng build web-components-cli --configuration oeb-skill-visualisation",
 		"build:app": "ng build --output-hashing=all --aot --configuration production && html-minifier -c html-minifier.config.json -o dist/index.html < dist/index.html",
 		"build:staging": "ng build --output-hashing=all --aot --configuration staging && html-minifier -c html-minifier.config.json -o dist/index.html < dist/index.html",
 		"build:develop": "ng build --output-hashing=all --aot --configuration develop && html-minifier -c html-minifier.config.json -o dist/index.html < dist/index.html",
@@ -68,7 +68,6 @@
 		"jspdf": "^2.5.1",
 		"maplibre-gl": "5.6.1",
 		"marked": "^15.0.11",
-		"ngx-build-plus": "^20.0.0",
 		"ngx-countup": "^13.2.0",
 		"ngx-drag-drop": "^20.0.1",
 		"ngx-dynamic-hooks": "^3.1.2",
