--- a/angular.json
+++ b/angular.json
@@ -25,13 +25,21 @@
 							"main": "src/app/recipient/components/recipient-skill-visualisation/recipient-skill-visualisation.web-component.ts",
 							"outputPath": "dist/webcomponents/oeb-skill-visualisation",
 							"styles": [
-								"src/assets/@concentricsky/badgr-style/dist/css/screen.css",
 								"src/styles/oeb/oeb_styles.scss",
 								"src/styles/google-webfonts/inter.scss",
 								"src/styles/google-webfonts/nunito.scss",
 								"src/styles/google-webfonts/rubik.scss",
 								"src/breakdown/static/css/re-style.css",
 								"src/app/recipient/components/recipient-skill-visualisation/recipient-skill-visualisation.component.scss"
+							],
+							"assets": [
+								"src/favicon.ico",
+								"src/assets",
+								{
+									"glob": "icons.svg",
+									"input": "./assets/@concentricsky/badgr-style/dist/images",
+									"output": "./assets/@concentricsky/badgr-style/dist/images"
+								}
 							]
 						}
 					}
