--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,8 @@ jobs:
       env:
         GITHUB_TOKEN ${{ secrets.GITHUB_TOKEN }}
       steps:
-        - uses: dexwritescode/release-on-merge-action@v1
+        - name: Create release and release notes
+          uses: dexwritescode/release-on-merge-action@v1
           with:
             version-increment-strategy: minor
             initial-version: '2.10.0'
