feat: production ready

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,7 @@
 on:
   push:
     branches:
-      - production-test
+      - production
 
 jobs:
   release-on-merge:
@@ -19,4 +19,3 @@ jobs:
           initial-version: '2.10.0'
           tag-prefix: v
           generate-release-notes: true
-          dry-run: true
