--- a/.docker/etc/site.conf
+++ b/.docker/etc/site.conf
@@ -10,4 +10,8 @@ server {
   location / {
     try_files $uri $uri/ /index.html;
   }
+
+  location /webcomponents/ {
+    add_header Access-Control-Allow-Origin *;
+  }
 }
