--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"class-variance-authority": "^0.7.0",
 		"clipboard": "^2.0.11",
 		"clsx": "^2.1.1",
+		"countries-list": "^3.1.1",
 		"d3": "^7.9.0",
 		"d3-force-boundary": "^0.0.3",
 		"deepmerge": "^4.3.1",
