feat/web components (#1493)
* feat: test how web components may work

* feat: add angular/elements

* feat: add working build step for web components

* feat: add version component as web component

* feat: add skill visualisation component to web components

* feat: draft first version of skill visualisation in web component

* feat: load translations in skill visualisation properly

* build: go back to building with built-in tooling

* build: us ESM version of isUrl to prevent warning

* docs: add readme and doc strings

* build: remove old polyfill

* build: remove inter as unused font

* build: remove unused css

* build: optimize assets

* build: fix app build

* build: run npm install for latest lock file

* feat: add global configuration for webcomponent language

* docs: leave note about iframes

* build(webcomponents): build web components in container and serve them

* build(webcomponents): build for staging as well

--- a/angular.json
+++ b/angular.json
@@ -3,6 +3,39 @@
 	"version": 1,
 	"newProjectRoot": "projects",
 	"projects": {
+		"web-components-cli": {
+			"projectType": "application",
+			"root": ".",
+			"sourceRoot": "src",
+			"architect": {
+				"build": {
+					"builder": "@angular-devkit/build-angular:browser-esbuild",
+					"options": {
+						"index": "webcomponents/index.html",
+						"tsConfig": "tsconfig.wc.json",
+						"polyfills": ["src/polyfills.ts"],
+						"inlineStyleLanguage": "scss"
+					},
+					"configurations": {
+						"oeb-version": {
+							"main": "src/app/public/components/version.web-component.ts",
+							"outputPath": "dist/webcomponents/oeb-version"
+						},
+						"oeb-skill-visualisation": {
+							"main": "src/app/recipient/components/recipient-skill-visualisation/recipient-skill-visualisation.web-component.ts",
+							"outputPath": "dist/webcomponents/oeb-skill-visualisation",
+							"styles": [
+								"src/styles/oeb/oeb_styles.scss",
+								"src/styles/google-webfonts/nunito.scss",
+								"src/styles/google-webfonts/rubik.scss",
+								"src/app/recipient/components/recipient-skill-visualisation/recipient-skill-visualisation.component.scss"
+							],
+							"assets": ["src/favicon.ico", "src/assets/@concentricsky/badgr-style/dist/images/icons.svg"]
+						}
+					}
+				}
+			}
+		},
 		"badgr-ui-cli": {
 			"root": ".",
 			"sourceRoot": "src",
@@ -36,7 +69,6 @@
 						"styles": [
 							"src/assets/@concentricsky/badgr-style/dist/css/screen.css",
 							"src/styles/oeb/oeb_styles.scss",
-							"src/styles/google-webfonts/inter.scss",
 							"src/styles/google-webfonts/nunito.scss",
 							"src/styles/google-webfonts/rubik.scss",
 							"node_modules/dialog-polyfill/dialog-polyfill.css",
