--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
 		"start-intellij": "ng serve --host 0.0.0.0 --disable-host-check --aot 2>&1 | perl -e '$|++; while (<>) { s/((ERROR|WARNING) in\\s*)(.*)/$1\\n$3/g; print $_; }'",
 		"build:widgets": "webpack --config widgets-webpack.config.ts",
 		"verify-prod-environment": "[[ -f src/environments/environment.prod.ts ]] || (echo '\\033[0;31m!!!'; echo '\\033[0;31m!!! No envrionment.prod.ts file present. Copy environment.prod.ts.example and modify it for your environment or consult the README'; echo '\\033[0;31m!!!'; echo; exit -1)",
-		"build:app": "ng build --output-hashing=all --aot --configuration production && html-minifier -c html-minifier.config.json -o dist/index.html < dist/index.html",
-		"build:staging": "ng build --output-hashing=all --aot --configuration staging && html-minifier -c html-minifier.config.json -o dist/index.html < dist/index.html",
-		"build:develop": "ng build --output-hashing=all --aot --configuration develop && html-minifier -c html-minifier.config.json -o dist/index.html < dist/index.html",
+		"build:web-components": "run-s build:web-components:*",
+		"build:web-components:oeb-version": "ng build web-components-cli --configuration oeb-version",
+		"build:web-components:oeb-skill-visualisation": "ng build web-components-cli --configuration oeb-skill-visualisation",
+		"build:app": "ng build badgr-ui-cli --output-hashing=all --aot --configuration production && html-minifier -c html-minifier.config.json -o dist/index.html < dist/index.html",
+		"build:staging": "ng build badgr-ui-cli --output-hashing=all --aot --configuration staging && html-minifier -c html-minifier.config.json -o dist/index.html < dist/index.html",
+		"build:develop": "ng build badgr-ui-cli --output-hashing=all --aot --configuration develop && html-minifier -c html-minifier.config.json -o dist/index.html < dist/index.html",
 		"build": "npm run build:app && npm run build:widgets",
 		"test": "ng test",
 		"test-intellij": "ng test 2>&1 | perl -e '$|++; while (<>) { s/((ERROR|WARNING) in\\s*)(.*)/$1\\n$3/g; print $_; }'",
@@ -32,6 +35,7 @@
 		"@angular/common": "20.1.3",
 		"@angular/compiler": "20.1.3",
 		"@angular/core": "20.1.3",
+		"@angular/elements": "^20.1.3",
 		"@angular/forms": "20.1.3",
 		"@angular/platform-browser": "20.1.3",
 		"@angular/platform-browser-dynamic": "20.1.3",
@@ -60,7 +64,6 @@
 		"fontfaceobserver": "^2.0.9",
 		"handlebars-helpers": "^0.10.0",
 		"html2canvas": "^1.4.1",
-		"inert-polyfill": "^0.2.5",
 		"jspdf": "^2.5.1",
 		"maplibre-gl": "5.6.1",
 		"marked": "^15.0.11",
@@ -125,6 +128,7 @@
 		"mapbox-gl": "^3.4.0",
 		"ngx-markdown-editor": "5.3.4",
 		"ngx-translate-testing": "^7.0.0",
+		"npm-run-all": "^4.1.5",
 		"onchange": "7.1.0",
 		"parse5": "^7.1.2",
 		"postcss": "^8.4.31",
