--- a/package.json
+++ b/package.json
@@ -89,6 +89,10 @@
 	"devDependencies": {
 		"@angular-builders/dev-server": "^7.3.1",
 		"@angular-devkit/build-angular": "20.1.3",
+		"@angular-eslint/builder": "^20.3.0",
+		"@angular-eslint/eslint-plugin": "^20.3.0",
+		"@angular-eslint/eslint-plugin-template": "^20.3.0",
+		"@angular-eslint/template-parser": "^20.3.0",
 		"@angular/compiler-cli": "20.1.3",
 		"@angular/language-service": "20.1.3",
 		"@commitlint/cli": "^19.8.1",
@@ -110,6 +114,7 @@
 		"codelyzer": "^6.0.0",
 		"commitizen": "^4.3.0",
 		"cz-conventional-changelog": "^3.3.0",
+		"eslint": "^8.57.0",
 		"file-loader": "^6.2.0",
 		"font-awesome": "^4.7.0",
 		"fontmin": "^2.0.2",
