--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
 		"@angular-eslint/builder": "^20.3.0",
 		"@angular-eslint/eslint-plugin": "^20.3.0",
 		"@angular-eslint/eslint-plugin-template": "^20.3.0",
+		"@angular-eslint/schematics": "^20.3.0",
 		"@angular-eslint/template-parser": "^20.3.0",
 		"@angular/compiler-cli": "20.1.3",
 		"@angular/language-service": "20.1.3",
