build: remove gts as recommended and use typescript-eslint

--- a/package.json
+++ b/package.json
@@ -21,9 +21,6 @@
 		"test-headless": "ng test --source-map=false --watch=false --browsers=ChromeHeadless",
 		"lint": "ng lint web-components-cli && ng lint badgr-ui-cli",
 		"postversion": "git push && git push --tags",
-		"gts-check": "gts check",
-		"gts-clean": "gts clean",
-		"gts-fix": "gts fix",
 		"prepare": "husky"
 	},
 	"private": true,
@@ -112,6 +109,7 @@
 		"@types/uglify-js": "3.17.4",
 		"@types/validator": "13.15.0",
 		"@types/webpack": "^5.28.5",
+		"@typescript-eslint/parser": "^8.44.1",
 		"commitizen": "^4.3.0",
 		"cz-conventional-changelog": "^3.3.0",
 		"eslint": "^8.57.1",
@@ -121,7 +119,6 @@
 		"font-awesome": "^4.7.0",
 		"fontmin": "^2.0.2",
 		"gh-pages": "^6.1.0",
-		"gts": "^5.2.0",
 		"html-minifier": "^4.0.0",
 		"husky": "^9.0.11",
 		"imagemin-cli": "^8.0.0",
