build: ignore inject warning for the time being

--- a/package.json
+++ b/package.json
@@ -187,7 +187,9 @@
 					"plugin:@angular-eslint/template/process-inline-templates",
 					"plugin:prettier/recommended"
 				],
-				"rules": {}
+				"rules": {
+					"@angular-eslint/prefer-injectable-inject": "off"
+				}
 			},
 			{
 				"files": [
