--- a/package.json
+++ b/package.json
@@ -95,6 +95,8 @@
 		"@angular/language-service": "20.1.3",
 		"@commitlint/cli": "^19.8.1",
 		"@commitlint/config-angular": "^19.8.1",
+		"@eslint/eslintrc": "^3.3.1",
+		"@eslint/js": "^9.36.0",
 		"@spartan-ng/cli": "^0.0.1-alpha.498",
 		"@testing-library/angular": "^17.4.0",
 		"@testing-library/dom": "^10.0.0",
