--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
 		"@types/uglify-js": "3.17.4",
 		"@types/validator": "13.15.0",
 		"@types/webpack": "^5.28.5",
+		"@typescript-eslint/eslint-plugin": "^8.46.0",
 		"@typescript-eslint/parser": "^8.44.1",
 		"commitizen": "^4.3.0",
 		"cz-conventional-changelog": "^3.3.0",
