--- a/package.json
+++ b/package.json
@@ -153,6 +153,7 @@
 		"ts-node": "^10.9.1",
 		"typedoc": "^0.28.5",
 		"typescript": "~5.8.3",
+		"typescript-eslint": "^8.46.0",
 		"uglify-js": "^3.5.11",
 		"url-loader": "^4.1.1",
 		"webpack-cli": "^5.1.4"
