--- a/angular.json
+++ b/angular.json
@@ -42,6 +42,7 @@
 							"main": "src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.web-component.ts",
 							"outputPath": "dist/webcomponents/oeb-badgeclass-edit-form",
 							"styles": [
+								"src/assets/@concentricsky/badgr-style/dist/css/screen.css",
 								"src/styles/oeb/oeb_styles.scss",
 								"src/styles/google-webfonts/nunito.scss",
 								"src/styles/google-webfonts/rubik.scss",
