--- a/angular.json
+++ b/angular.json
@@ -46,9 +46,16 @@
 								"src/styles/oeb/oeb_styles.scss",
 								"src/styles/google-webfonts/nunito.scss",
 								"src/styles/google-webfonts/rubik.scss",
-								"src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.css"
+								"src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.css",
+								"src/app/issuer/components/badgeclass-select-type/badgeclass-select-type.component.scss"
 							],
-							"assets": ["src/favicon.ico", "src/assets/@concentricsky/badgr-style/dist/images/icons.svg"]
+							"assets": [
+								"src/favicon.ico",
+								"src/assets/@concentricsky/badgr-style/dist/images/icons.svg",
+								"src/breakdown/static/badgestudio/shapes/participation.svg",
+								"src/breakdown/static/badgestudio/shapes/competency.svg",
+								"src/breakdown/static/badgestudio/shapes/learningpath.svg"
+							]
 						}
 					}
 				}
