fix: add missing images

--- a/angular.json
+++ b/angular.json
@@ -55,7 +55,8 @@
 								"src/breakdown/static/images/square.svg",
 								"src/breakdown/static/badgestudio/shapes/participation.svg",
 								"src/breakdown/static/badgestudio/shapes/competency.svg",
-								"src/breakdown/static/badgestudio/shapes/learningpath.svg"
+								"src/breakdown/static/badgestudio/shapes/learningpath.svg",
+								"src/breakdown/static/images/badge-loading.svg"
 							]
 						}
 					}
