fix: small visual issues

--- a/angular.json
+++ b/angular.json
@@ -53,6 +53,7 @@
 								"src/favicon.ico",
 								"src/assets/oeb/images/badge/icon-ai-skills.svg",
 								"src/assets/oeb/images/badge/loading.svg",
+								"src/assets/oeb/images/badge/icon-ai-betterresults.svg",
 								"src/breakdown/static/images/square.svg",
 								"src/breakdown/static/badgestudio/shapes/participation.svg",
 								"src/breakdown/static/badgestudio/shapes/competency.svg",
