--- a/.github/workflows/registry-build-publish.yml
+++ b/.github/workflows/registry-build-publish.yml
@@ -6,6 +6,7 @@ on:
         tags: ['v*.*.*']
     pull_request:
         branches:
+            - production
             - main
             - develop
     merge_group:
