--- a/angular.json
+++ b/angular.json
@@ -37,6 +37,30 @@
 								"src/app/recipient/components/recipient-skill-visualisation/recipient-skill-visualisation.component.scss"
 							],
 							"assets": ["src/favicon.ico", "src/assets/@concentricsky/badgr-style/dist/images/icons.svg"]
+						},
+						"oeb-badge-creation": {
+							"main": "src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.web-component.ts",
+							"outputPath": "dist/webcomponents/oeb-badgeclass-edit-form",
+							"styles": [
+								"src/assets/@concentricsky/badgr-style/dist/css/screen.css",
+								"src/styles/oeb/oeb_styles.scss",
+								"src/styles/google-webfonts/nunito.scss",
+								"src/styles/google-webfonts/rubik.scss",
+								"src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.component.css",
+								"src/app/issuer/components/badgeclass-select-type/badgeclass-select-type.component.scss"
+							],
+							"assets": [
+								"src/favicon.ico",
+								"src/assets/oeb/images/badge/icon-ai-skills.svg",
+								"src/assets/oeb/images/badge/loading.svg",
+								"src/assets/oeb/images/badge/icon-ai-betterresults.svg",
+								"src/breakdown/static/images/square.svg",
+								"src/breakdown/static/badgestudio/shapes/participation.svg",
+								"src/breakdown/static/badgestudio/shapes/competency.svg",
+								"src/breakdown/static/badgestudio/shapes/learningpath.svg",
+								"src/breakdown/static/images/badge-loading.svg",
+								"src/breakdown/static/images/badge-failed.svg"
+							]
 						}
 					}
 				}
