Fix/webcomponent build (#1756)
* feat: move web component build to a script

* feat: use correct file replacements for environments of web components

* fix: remove generic override with production

---------

Co-authored-by: jona159 <65068389+jona159@users.noreply.github.com>

--- a/angular.json
+++ b/angular.json
@@ -91,6 +91,30 @@
 									"with": "src/environments/environment.develop.ts"
 								}
 							]
+						},
+						"production": {
+							"fileReplacements": [
+								{
+									"replace": "src/environments/environment.ts",
+									"with": "src/environments/environment.prod.ts"
+								}
+							]
+						},
+						"staging": {
+							"fileReplacements": [
+								{
+									"replace": "src/environments/environment.ts",
+									"with": "src/environments/environment.staging.ts"
+								}
+							]
+						},
+						"develop": {
+							"fileReplacements": [
+								{
+									"replace": "src/environments/environment.ts",
+									"with": "src/environments/environment.develop.ts"
+								}
+							]
 						}
 					}
 				}
