--- a/angular.json
+++ b/angular.json
@@ -60,12 +60,6 @@
 								"src/breakdown/static/badgestudio/shapes/learningpath.svg",
 								"src/breakdown/static/images/badge-loading.svg",
 								"src/breakdown/static/images/badge-failed.svg"
-							],
-							"fileReplacements": [
-								{
-									"replace": "src/environments/environment.ts",
-									"with": "src/environments/environment.prod.ts"
-								}
 							]
 						},
 						"production": {
@@ -92,30 +86,7 @@
 								}
 							]
 						},
-						"production": {
-							"fileReplacements": [
-								{
-									"replace": "src/environments/environment.ts",
-									"with": "src/environments/environment.prod.ts"
-								}
-							]
-						},
-						"staging": {
-							"fileReplacements": [
-								{
-									"replace": "src/environments/environment.ts",
-									"with": "src/environments/environment.staging.ts"
-								}
-							]
-						},
-						"develop": {
-							"fileReplacements": [
-								{
-									"replace": "src/environments/environment.ts",
-									"with": "src/environments/environment.develop.ts"
-								}
-							]
-						}
+						"local": {}
 					}
 				}
 			}
