--- a/angular.json
+++ b/angular.json
@@ -38,6 +38,36 @@
 							],
 							"assets": ["src/favicon.ico", "src/assets/@concentricsky/badgr-style/dist/images/icons.svg"]
 						},
+						"oeb-earned-badges-overview": {
+							"main": "src/app/recipient/components/recipient-earned-badges-overview/recipient-earned-badges-overview.web-component.ts",
+							"outputPath": "dist/webcomponents/oeb-earned-badges-overview",
+							"styles": [
+								"src/styles/oeb/oeb_styles.scss",
+								"src/styles/google-webfonts/nunito.scss",
+								"src/styles/google-webfonts/rubik.scss"
+							],
+							"assets": ["src/favicon.ico", "src/assets/@concentricsky/badgr-style/dist/images/icons.svg"]
+						},
+						"oeb-recipient-competency-overview": {
+							"main": "src/app/recipient/components/recipient-competency-overview/recipient-competency-overview.web-component.ts",
+							"outputPath": "dist/webcomponents/oeb-competency-overview",
+							"styles": [
+								"src/styles/oeb/oeb_styles.scss",
+								"src/styles/google-webfonts/nunito.scss",
+								"src/styles/google-webfonts/rubik.scss"
+							],
+							"assets": ["src/favicon.ico", "src/assets/@concentricsky/badgr-style/dist/images/icons.svg"]
+						},
+						"oeb-recipient-learningpaths-overview": {
+							"main": "src/app/recipient/components/recipient-learningpaths-overview/recipient-learningpaths-overview.web-component.ts",
+							"outputPath": "dist/webcomponents/oeb-learningpaths-overview",
+							"styles": [
+								"src/styles/oeb/oeb_styles.scss",
+								"src/styles/google-webfonts/nunito.scss",
+								"src/styles/google-webfonts/rubik.scss"
+							],
+							"assets": ["src/favicon.ico", "src/assets/@concentricsky/badgr-style/dist/images/icons.svg"]
+						},
 						"oeb-badge-creation": {
 							"main": "src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.web-component.ts",
 							"outputPath": "dist/webcomponents/oeb-badgeclass-edit-form",
