--- a/angular.json
+++ b/angular.json
@@ -68,6 +68,16 @@
 							],
 							"assets": ["src/favicon.ico", "src/assets/@concentricsky/badgr-style/dist/images/icons.svg"]
 						},
+						"oeb-backpack": {
+							"main": "src/app/recipient/components/recipient-backpack/recipient-backpack.web-component.ts",
+							"outputPath": "dist/webcomponents/oeb-backpack",
+							"styles": [
+								"src/styles/oeb/oeb_styles.scss",
+								"src/styles/google-webfonts/nunito.scss",
+								"src/styles/google-webfonts/rubik.scss"
+							],
+							"assets": ["src/favicon.ico", "src/assets/@concentricsky/badgr-style/dist/images/icons.svg"]
+						},
 						"oeb-badge-creation": {
 							"main": "src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.web-component.ts",
 							"outputPath": "dist/webcomponents/oeb-badgeclass-edit-form",
