--- a/angular.json
+++ b/angular.json
@@ -47,7 +47,12 @@
 								"src/styles/google-webfonts/nunito.scss",
 								"src/styles/google-webfonts/rubik.scss"
 							],
-							"assets": ["src/favicon.ico", "src/assets/@concentricsky/badgr-style/dist/images/icons.svg"]
+							"assets": [
+								"src/favicon.ico",
+								"src/assets/@concentricsky/badgr-style/dist/images/icons.svg",
+								"src/breakdown/static/images/badge-loading.svg",
+								"src/breakdown/static/images/badge-failed.svg"
+							]
 						},
 						"oeb-competency-overview": {
 							"main": "src/app/recipient/components/recipient-competency-overview/recipient-competency-overview.web-component.ts",
