--- a/angular.json
+++ b/angular.json
@@ -74,7 +74,13 @@
 								"src/styles/google-webfonts/nunito.scss",
 								"src/styles/google-webfonts/rubik.scss"
 							],
-							"assets": ["src/favicon.ico", "src/assets/@concentricsky/badgr-style/dist/images/icons.svg"]
+							"assets": [
+								"src/favicon.ico",
+								"src/assets/@concentricsky/badgr-style/dist/images/icons.svg",
+								"src/breakdown/static/images/badge-loading.svg",
+								"src/breakdown/static/images/badge-failed.svg",
+								"src/assets/oeb/images/learningPath/learningPathIcon.svg"
+							]
 						},
 						"oeb-backpack": {
 							"main": "src/app/recipient/components/recipient-backpack/recipient-backpack.web-component.ts",
