--- a/angular.json
+++ b/angular.json
@@ -89,9 +89,16 @@
 								"src/assets/@concentricsky/badgr-style/dist/css/screen.css",
 								"src/styles/oeb/oeb_styles.scss",
 								"src/styles/google-webfonts/nunito.scss",
-								"src/styles/google-webfonts/rubik.scss"
+								"src/styles/google-webfonts/rubik.scss",
+								"src/app/recipient/components/recipient-skill-visualisation/recipient-skill-visualisation.component.scss"
 							],
-							"assets": ["src/favicon.ico", "src/assets/@concentricsky/badgr-style/dist/images/icons.svg"]
+							"assets": [
+								"src/favicon.ico",
+								"src/assets/@concentricsky/badgr-style/dist/images/icons.svg",
+								"src/breakdown/static/images/badge-loading.svg",
+								"src/breakdown/static/images/badge-failed.svg",
+								"src/assets/oeb/images/learningPath/learningPathIcon.svg"
+							]
 						},
 						"oeb-badge-creation": {
 							"main": "src/app/issuer/components/badgeclass-edit-form/badgeclass-edit-form.web-component.ts",
