--- a/angular.json
+++ b/angular.json
@@ -99,7 +99,8 @@
 								"src/assets/@concentricsky/badgr-style/dist/images/icons.svg",
 								"src/breakdown/static/images/badge-loading.svg",
 								"src/breakdown/static/images/badge-failed.svg",
-								"src/assets/oeb/images/learningPath/learningPathIcon.svg"
+								"src/assets/oeb/images/learningPath/learningPathIcon.svg",
+								"src/assets/@concentricsky/badgr-style/dist/images/image-empty-backpack.svg"
 							]
 						},
 						"oeb-badge-creation": {
